--- a/css/styles.css
+++ b/css/styles.css
@@ -27,3 +27,10 @@
 .contact-div i {
     margin-bottom: 0.6em;
 }
+
+@media (max-width: 480px) {
+   .navbar-btn{
+       margin: 0 0 10px 0px;
+   }
+
+}
