--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,18 @@
 
 .form-holder {
     margin-top: -5em;
-    background: #F5F5F5;
-    padding-top: 3em;
-    padding-bottom: 3em;
+
+/*.google-maps {
+    position: relative;
+    padding-bottom: 75%; // This is the aspect ratio
+    height: 0;
+    overflow: hidden;
 }
+.google-maps iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100% !important;
+    height: 100% !important;
+}
+  */
